--- a/index.html
+++ b/index.html
@@ -191,8 +191,52 @@
          <p>Lilly Stoephasius,</p>
          <p>Skateboarder, Germany</p>
          <h3>Discover</h3>
+
       </div>
    </section>
+
+   <div class="touch-text">
+      <p>Keep in touch</p>
+      <h3>Get our travel advice, global views and travel freebies in your <br> inbox</h3>
+   </div>
+
+
+   <div class="input-name">
+      <div><input type="text" name="First Name" value="First Name"></div>
+      <div><input type="text" name="Last Name" value="Last Name"></div>
+   </div>
+   <div class="wrapper-Email-button">
+      <div class="Email"><input type="text" name="Email" value="Email"></div>
+      <button class="button">Subscribe</button>
+   </div>
+
+
+   <footer>
+      <div class="logo-items">
+         <img class="footer-logo" src="./Img/images/thalby-white.png" alt="logo">
+         <div>
+            <img src="./Img/images/Facebook.png" alt="instagram">
+            <img src="./Img/images/instagram.png" alt="find">
+            <img src="./Img/images/twitter foot.png" alt="cart">
+         </div>
+      </div>
+      <ul class="footer-ul1">
+         <li>About</li>
+         <li>About Us</li>
+         <li>Privacy Policy</li>
+         <li>Terms and Conditions</li>
+         <li>Write for Us</li>
+      </ul>
+      <ul class="footer-ul2">
+         <li>Contact</li>
+         <li>Email hi@thalby.com</li>
+         <li>Help</li>
+      </ul>
+   </footer>
+
+   <div class="copyright">
+      <span>Thalby LLC © 2021</span>
+   </div>
 
 </body>
 
